--- a/Vosje2/styles/main.css
+++ b/Vosje2/styles/main.css
@@ -23,7 +23,7 @@ body, html {
 
 /* IMAGE STYLES*/
 .img {
-    background-image:url(../styles/images/icenium.png);
+    background-image:url(../styles/images/logoVos.png);
     background-repeat:no-repeat;
     text-align:center;
     width:320px;
